[package]
name = "spoofer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
tokio = { version = "1.23.0", features = ["full"] }
futures = { version = "0.3.19" }
async-trait = { version = "0.1.60" }
serde_json = { version = "1.0.91" }