[package]
name = "activitymanager"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
async-trait = { version = "0.1.60" }
serde_json = { version = "1.0.91" }
clap = { version = "4.0.32", features = ["derive"] }